@@ -1,3 +1,9 @@
+2015-10-24 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/ralloc.c,
+	  src/port.h:
+	  Spelling fixes.
+
 2015-10-22 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* SDCC.y:
